--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <application
         android:name="EMFMedicalApp"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/emf_logo_small"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
       
