--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/AppTheme" >
       
          
-         
+ 	    	   
     	<activity android:name=".MainActivity" android:label="@string/app_name"
                         android:theme="@android:style/Theme.Light.NoTitleBar"
                         android:launchMode="singleInstance">
@@ -27,6 +27,13 @@
 	         </intent-filter>
          </activity>
           
+    	
+    	    
+    	<activity android:name=".PRFActivity" android:label="@string/app_name"
+                        android:theme="@android:style/Theme.Light.NoTitleBar"
+                        android:launchMode="singleInstance">
+         </activity>
+         
              
     </application>
     
