--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 10 // Potentially this should be Nook API or similar
+    compileSdkVersion 'Barnes and Noble, Inc.:NOOK Tablet:10' // Potentially this should be Nook API or similar
     buildToolsVersion "23.0.3"
 
     defaultConfig {
