--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,23 +1,32 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 'Barnes and Noble, Inc.:NOOK Tablet:10' // Potentially this should be Nook API or similar
+    compileSdkVersion 'Barnes and Noble, Inc.:NOOK Tablet:10'
+    // Potentially this should be Nook API or similar
     buildToolsVersion "23.0.3"
-
     defaultConfig {
         applicationId "uk.co.section9.emfmedical"
-        minSdkVersion 7
-        targetSdkVersion 8
+        minSdkVersion 10
+        targetSdkVersion 10
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+    defaultConfig {
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    }
+    productFlavors {
+    }
 }
 
 dependencies {
     compile 'com.android.support:support-v4:18.0.0'
+    testCompile 'junit:junit:4.+'
+    testCompile 'org.mockito:mockito-core:1.9.5'
+    androidTestCompile 'com.android.support.test:runner:0.4'
+    androidTestCompile 'com.android.support.test:rules:0.4'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
 }
