--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="uk.co.section9.emfmedical"
-    android:versionCode="1"
-    android:versionName="1.0" android:installLocation="preferExternal">
+	xmlns:tools="http://schemas.android.com/tools"
+	package="uk.co.section9.emfmedical"
+	android:versionCode="1"
+	android:versionName="1.0"
+	android:installLocation="preferExternal">
 
     <uses-sdk
-        android:minSdkVersion="7"
-        android:targetSdkVersion="8" />
+        android:minSdkVersion="8"
+        android:targetSdkVersion="8"
+		tools:overrideLibrary="android.support.test" />
 
     <application
         android:name="EMFMedicalApp"
