--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,8 @@
 	android:installLocation="preferExternal">
 
     <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="8"
-		tools:overrideLibrary="android.support.test" />
+        android:minSdkVersion="7"
+        android:targetSdkVersion="8" />
 
     <application
         android:name="EMFMedicalApp"
