--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,7 @@
 	android:versionName="1.0"
 	android:installLocation="preferExternal">
 
-    <uses-sdk
-        android:minSdkVersion="7"
-        android:targetSdkVersion="8" />
+    <uses-sdk android:targetSdkVersion="8" />
 
     <application
         android:name="EMFMedicalApp"
